Revert ".travis.yml: Update cover tool URL"
This reverts commit 1ad081672f4337c8c67901a79561e2642536f3b8.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
 before_install:
   - go get github.com/onsi/gomega
   - go get github.com/onsi/ginkgo
-  - go get golang.org/x/tools/cmd/cover
+  - go get code.google.com/p/go.tools/cmd/cover
 script:
   - go test -coverprofile=coverage.txt -covermode=atomic
 after_success:
